Added variable names to dataset divs

--- a/pythonmodels/static/pythonmodels/css/dataUpload.css
+++ b/pythonmodels/static/pythonmodels/css/dataUpload.css
@@ -8,6 +8,10 @@
     font-size: 18px;
 }
 
+.newDataset {
+     background-color: rgba(1, 201, 0, 0.3);
+ }
+
 #deleteUpload {
     visibility: hidden;
 }
