Added variable info and icon to data upload

--- a/pythonmodels/templates/pythonmodels/user_content/datasetInfo.html
+++ b/pythonmodels/templates/pythonmodels/user_content/datasetInfo.html
@@ -10,7 +10,7 @@
             {% for variable in data.datasetvariable_set.all %}
                 <li>
                     <span class="varsToggle">
-                        {{ variable.name }} <i class="fas fa-arrow-alt-circle-right"></i>
+                        {{ variable.name }} <i class="varInfoIcon fas fa-plus"></i>
                     </span>
                     <ul class="listVars">
                         <li>{{ variable.type }}</li>
