--- a/pythonmodels/static/pythonmodels/css/master.css
+++ b/pythonmodels/static/pythonmodels/css/master.css
@@ -1,33 +1,24 @@
 @import url('https://fonts.googleapis.com/css?family=\
 Indie+Flower|Bree+Serif');
 
-/* Remove the navbar's default margin-bottom and rounded borders */
 .header {
-    margin-bottom: 0;
-    border-radius: 0;
+    background-color: black;
     font-family: "Bree Serif";
     font-size: 20px;
 }
 
 .navbar-brand {
-    font-size: 24px;
+    font-size: 28px;
 }
 
 .landing {
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    margin-top: 50px;
+    margin-bottom: 150px;
     font-family: "Bree Serif";
 }
 
 hr {
     border-color: #9b9b9b;
-}
-
-.landingContainer {
-    margin-top: 50px;
-    margin-bottom: 150px;
-    width: 100%
 }
 
 #landingTitle {
@@ -58,11 +49,6 @@ hr {
     margin-bottom: 50px;
 }
 
-.loginRegistration {
-    height: 100vh;
-}
-
-/* Set black background color, white text and some padding */
 footer {
     background-color: #000000;
     color: white;
