--- a/pythonmodels/templates/pythonmodels/layout/footer.html
+++ b/pythonmodels/templates/pythonmodels/layout/footer.html
@@ -1,6 +1,6 @@
 {% load static %}
 
-<footer class="">
+<footer>
     <div id="cpdLink">
         <a href="https://www.cphillipsdorsett.com" target="_blank">Created by Clayton Phillips-Dorsett</a>
     </div>
