--- a/pythonmodels/templates/pythonmodels/layout/master.html
+++ b/pythonmodels/templates/pythonmodels/layout/master.html
@@ -7,7 +7,8 @@
     <title>{% block title %}Python Models{% endblock %}</title>
 
     {# Bootstrap css #}
-    <link rel="stylesheet" href="{% static 'pythonmodels/css/bootstrap.min.css' %}">
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
     {# Font Awesome css #}
     <link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
@@ -30,8 +31,13 @@
 {# Jquery js #}
 <script src="{% static 'pythonmodels/js/jquery-3.2.1.min.js' %}"></script>
 
-{# Bootstrap js #}
-<script src="{% static 'pythonmodels/js/bootstrap.min.js' %}"></script>
+{# Bootstrap js (with Popper js) #}
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+        integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+        crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+        integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+        crossorigin="anonymous"></script>
 
 {# Highcharts js #}
 <script src="https://code.highcharts.com/highcharts.js"></script>
