--- a/pythonmodels/templates/pythonmodels/registration/register.html
+++ b/pythonmodels/templates/pythonmodels/registration/register.html
@@ -8,7 +8,7 @@
 
     <div class="landing loginRegistration">
 
-        <div class="col-md-4">
+        <div class="col-md-4 offset-md-4">
             <h1>Register</h1>
             <p>Already registered? <a href={% url 'pythonmodels:login' %}>Login here...</a></p>
             {% crispy form %}
