--- a/pythonmodels/templates/pythonmodels/user_content/datasetInfo.html
+++ b/pythonmodels/templates/pythonmodels/user_content/datasetInfo.html
@@ -1,6 +1,16 @@
-<h4>{{ data.name }}</h4>
-<ul>
-    <li>Number of Variables: {{ data.vars }}</li>
+<h3><i class="fas fa-table"></i> {{ data.name }}</h3>
+<div class="card">
+  <div class="card-header">
+    Featured
+  </div>
+  <div class="card-body">
+    <h5 class="card-title">Special title treatment</h5>
+    <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+    <a href="#" class="btn btn-primary">Go somewhere</a>
+  </div>
+</div>
+<ul class="list-inline">
+    <li class="list-inline-item">Number of Variables: {{ data.vars }}</li>
     <li>Number of Observations: {{ data.observations }}</li>
     <li>
         <span class="varsToggle">
