Updated bootstrap 4, formatted cards for dataset divs

--- a/pythonmodels/templates/pythonmodels/landing_content/landing.html
+++ b/pythonmodels/templates/pythonmodels/landing_content/landing.html
@@ -50,9 +50,9 @@
         </div>
 
         <div class="row justify-content-center">
-            <a href="{% url 'pythonmodels:guest' %}" class="btn btn-lg btn-info">Get Started <i
+            <a href="{% url 'pythonmodels:guest' %}" class="btn btn-lg btn-primary">Get Started <i
                     class="fas fa-chart-line"></i></a>
-            <a href="{% url 'pythonmodels:login' %}" class="btn btn-lg btn-light">Login <i
+            <a href="{% url 'pythonmodels:login' %}" class="btn btn-lg btn-dark">Login <i
                     class="fas fa-sign-in-alt"></i></a>
             <a href="{% url 'pythonmodels:register' %}" class="btn btn-lg btn-success">Register <i
                     class="fas fa-user-plus"></i></a>
