--- a/pythonmodels/templates/pythonmodels/layout/master.html
+++ b/pythonmodels/templates/pythonmodels/layout/master.html
@@ -22,8 +22,9 @@
 
 {% include 'pythonmodels/layout/header.html' %}
 
-{% block content %}
-{% endblock %}
+<div id="masterBody">
+    {% block content %}{% endblock %}
+</div>
 
 {% include 'pythonmodels/layout/footer.html' %}
 
