--- a/pythonmodels/templates/pythonmodels/user_content/dataUpload.html
+++ b/pythonmodels/templates/pythonmodels/user_content/dataUpload.html
@@ -49,7 +49,7 @@
 
         <form id="deleteUpload" method="post">
             {% csrf_token %}
-            <button class="btn btn-default deleteBtn">Delete Dataset
+            <button class="btn btn-dark deleteBtn">Delete Dataset
             </button>
         </form>
 
