--- a/pythonmodels/static/pythonmodels/css/user.css
+++ b/pythonmodels/static/pythonmodels/css/user.css
@@ -1,8 +1,3 @@
-/* Set height of the grid so .sidenav can be 100% (adjust as needed) */
-.row.content {
-    height: 100vh;
-}
-
 /* Set gray background color and 100% height */
 .sidenav {
     height: 100%;
@@ -39,10 +34,7 @@
 }
 
 .datasetDiv {
-    padding-left: 20px;
-    padding-bottom: 5px;
     margin-bottom: 10px;
-    border-radius: 5px;
 }
 
 .oldDataset {
@@ -65,4 +57,8 @@
     position: relative;
     font-size: 50%;
     top: -2px;
+}
+
+.buttonSpace {
+    margin-right: 5px;
 }
