--- a/pythonmodels/templates/pythonmodels/registration/login.html
+++ b/pythonmodels/templates/pythonmodels/registration/login.html
@@ -6,15 +6,10 @@
 
 {% block content %}
 
-    <div class="landing loginRegistration">
-
-        <div class="row align-items-center" style="height: 100%">
-            <div class="col-md-4 offset-md-4">
-                <h1>Login</h1>
-                <p>Don't have an account? <a href={% url 'pythonmodels:register' %}>Register here...</a></p>
-                {% crispy form %}
-            </div>
-        </div>
-
+    <div class="landing col-md-4 offset-md-4">
+        <h1>Login</h1>
+        <p>Don't have an account? <a href={% url 'pythonmodels:register' %}>Register here...</a></p>
+        {% crispy form %}
     </div>
+
 {% endblock %}
