--- a/pythonmodels/templates/pythonmodels/registration/register.html
+++ b/pythonmodels/templates/pythonmodels/registration/register.html
@@ -6,15 +6,10 @@
 
 {% block content %}
 
-    <div class="landing loginRegistration">
-
-        <div class="col-md-4 offset-md-4">
-            <h1>Register</h1>
-            <p>Already registered? <a href={% url 'pythonmodels:login' %}>Login here...</a></p>
-            {% crispy form %}
-        </div>
-
+    <div class="landing col-md-4 offset-md-4">
+        <h1>Register</h1>
+        <p>Already registered? <a href={% url 'pythonmodels:login' %}>Login here...</a></p>
+        {% crispy form %}
     </div>
-
 
 {% endblock %}
