--- a/pythonmodels/static/pythonmodels/css/user.css
+++ b/pythonmodels/static/pythonmodels/css/user.css
@@ -59,6 +59,11 @@
     top: -2px;
 }
 
+.list-group-item {
+    padding-top: 5px;
+    padding-bottom: 5px;
+}
+
 .buttonSpace {
     margin-right: 5px;
 }
